gl31-master/src/test/deca/lex/invalid/hellotest/chaine_guillemet.deca
// Description:
//    tests de programme incorrect lexicalement (3 " uniques) pour hello-world
//
// Resultats:
//    Ligne 10 : Erreur, guillemet mal place
//
// Historique:
//    cree le 07/01/2021

"Commentaire"guillemet en trop"